rewrote 4, 5 improved 6 added list of passed labs

--- a/6/Makefile
+++ b/6/Makefile
@@ -2,14 +2,14 @@
 
 APP = rcopy
 OBJ = source.o
-FLAGS = -lpthread
-CC = g++
+FLAGS = -lpthread -pthread -lpthread
+CC = gcc
 
 $(APP): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(APP)
 
-source.o: source.cpp
-	$(CC) -c source.cpp $(FLAGS) -o source.o
+source.o: source.c
+	$(CC) -c source.c $(FLAGS) -o source.o
 
 clean:
 	rm -rf core $(APP) $(OBJ)
