--- a/26/Makefile
+++ b/26/Makefile
@@ -1,5 +1,5 @@
 APP = bin
-OBJ = source.o
+OBJ = source.o terminal.o
 CXXFLAGS = -lpthread
 CC = g++
 
@@ -8,6 +8,9 @@ $(APP): $(OBJ)
 
 source.o: source.cpp
 	$(CC) -c -o source.o source.cpp $(CXXFLAGS)
+
+terminal.o: terminal.h terminal.c
+	$(CC) -o terminal.o -c terminal.c
 
 clean:
 	rm -rf $(APP) $(OBJ) core
