--- a/23/Makefile
+++ b/23/Makefile
@@ -1,22 +1,24 @@
-APP=bin
-CXXFLAGS=-lrt -pthread -lpthread -g
+APP=test
+CXXFLAGS=-lrt -pthread -lpthread
 CC=g++
-OBJ=source.o Semaphore.o MsgQueue.o Thread.o
+OBJ=test.o ../libs/Semaphore/Semaphore.o ../libs/MsgQueue/MsgQueue.o ../libs/Thread/Thread.o
 
 $(APP): $(OBJ)
 	$(CC) -o $(APP) $(CXXFLAGS) $(OBJ)
 
-Semaphore.o: Semaphore.cpp Semaphore.h
-	$(CC) -c  Semaphore.cpp
+../libs/Semaphore/Semaphore.o: ../libs/Semaphore/Semaphore.cpp ../libs/Semaphore/Semaphore.h
+	$(CC) -c  ../libs/Semaphore/Semaphore.cpp -o ../libs/Semaphore/Semaphore.o
 
-MsgQueue.o: MsgQueue.cpp MsgQueue.h
-	$(CC) -c  MsgQueue.cpp
+../libs/MsgQueue/MsgQueue.o: ../libs/MsgQueue/MsgQueue.cpp ../libs/MsgQueue/MsgQueue.h
+	$(CC) -c  ../libs/MsgQueue/MsgQueue.cpp -o ../libs/MsgQueue/MsgQueue.o
 
-Thread.o: Thread.cpp Thread.h
-	$(CC) -c Thread.cpp
+../libs/Thread/Thread.o: ../libs/Thread/Thread.cpp ../libs/Thread/Thread.h
+	$(CC) -c ../libs/Thread/Thread.cpp -o ../libs/Thread/Thread.o
 
-source.o: source.cpp 
-	$(CC) -c source.cpp
+test.o: test.cpp 
+	$(CC) -c test.cpp -o test.o
 
 clean:
 	rm -rf $(APP) $(OBJ) core
+
+
