--- a/26/Makefile
+++ b/26/Makefile
@@ -9,8 +9,8 @@ $(APP): $(OBJ)
 source.o: source.cpp
 	$(CC) -c -o source.o source.cpp $(CXXFLAGS)
 
-terminal.o: terminal.h terminal.c
-	$(CC) -o terminal.o -c terminal.c
+terminal.o: terminal.h terminal.cpp
+	$(CC) -o terminal.o -c terminal.cpp
 
 clean:
 	rm -rf $(APP) $(OBJ) core
