--- a/25/Makefile
+++ b/25/Makefile
@@ -2,19 +2,19 @@
 
 APP = retranslator
 OBJ = retranslator.o Forwarded_connection/Forwarded_connection.o ../libs/Mutex/Mutex.o
-CXXFLAGS = -lpthread -pthread -pg
+CXXFLAGS = -lpthread -pthread -O4 -Wall
 CC = g++
 
 $(APP): $(OBJ)
 	$(CC) -o $(APP) $(OBJ) $(CXXFLAGS)
 
-retranslator.o: retranslator.cpp ../libs/Fd_set/Fd_set.h ../libs/Buffer/Buffer.h ../libs/Buffer/Chunk/Chunk.h
+retranslator.o: Makefile retranslator.cpp ../libs/Fd_set/Fd_set.h ../libs/Buffer/Buffer.h ../libs/Buffer/Chunk/Chunk.h
 	$(CC) -o retranslator.o -c $(CXXFLAGS) retranslator.cpp
 
-Forwarded_connection/Forwarded_connection.o: Forwarded_connection/Forwarded_connection.cpp Forwarded_connection/Forwarded_connection.h
+Forwarded_connection/Forwarded_connection.o: Makefile Forwarded_connection/Forwarded_connection.cpp Forwarded_connection/Forwarded_connection.h
 	$(CC) -o Forwarded_connection/Forwarded_connection.o -c $(CXXFLAGS) Forwarded_connection/Forwarded_connection.cpp
 
-../libs/Mutex/Mutex.o: ../libs/Mutex/Mutex.cpp ../libs/Mutex/Mutex.h
+../libs/Mutex/Mutex.o: Makefile ../libs/Mutex/Mutex.cpp ../libs/Mutex/Mutex.h
 	$(CC) -o ../libs/Mutex/Mutex.o ../libs/Mutex/Mutex.cpp -c $(CXXFLAGS)
 
 clean:
