--- a/25/Makefile
+++ b/25/Makefile
@@ -1,7 +1,7 @@
 #! /usr/bin/make -f
 
 APP = retranslator
-OBJ = retranslator.o Forwarded_connection/Forwarded_connection.o ../libs/Mutex/Mutex.o
+OBJ = retranslator.o Forwarded_connection/Forwarded_connection.o
 CXXFLAGS = -pthread -lpthread
 CC = g++
 
@@ -13,9 +13,6 @@ retranslator.o: Makefile retranslator.cpp ../libs/Fd_set/Fd_set.h ../libs/Buffer
 
 Forwarded_connection/Forwarded_connection.o: Makefile Forwarded_connection/Forwarded_connection.cpp Forwarded_connection/Forwarded_connection.h
 	$(CC) -o Forwarded_connection/Forwarded_connection.o -c $(CXXFLAGS) Forwarded_connection/Forwarded_connection.cpp
-
-../libs/Mutex/Mutex.o: Makefile ../libs/Mutex/Mutex.cpp ../libs/Mutex/Mutex.h
-	$(CC) -o ../libs/Mutex/Mutex.o ../libs/Mutex/Mutex.cpp -c $(CXXFLAGS)
 
 clean:
 	rm -rf core $(APP) $(OBJ)
