--- a/15/Makefile
+++ b/15/Makefile
@@ -8,8 +8,8 @@ CC = gcc
 $(APP): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(APP)
 
-source.o: source.c
-	$(CC) -c source.c $(FLAGS) -o source.o
+source.o: source_independent.c
+	$(CC) -c source_independent.c $(FLAGS) -o source.o
 
 clean:
 	rm -rf core $(APP) $(OBJ)
