--- a/18/Makefile
+++ b/18/Makefile
@@ -1,12 +1,15 @@
 #/usr/bin/make -f
 
 APP = bin
-OBJ = source.o
+OBJ = source.o ../libs/Mutex/Mutex.o
 FLAGS = -lpthread
 CC = g++
 
 $(APP): $(OBJ)
 	$(CC) $(FLAGS) $(OBJ) -o $(APP)
+
+../libs/Mutex/Mutex.o: ../libs/Mutex/Mutex.cpp ../libs/Mutex/Mutex.h
+	$(CC) -c -o ../libs/Mutex/Mutex.o $(FLAGS) ../libs/Mutex/Mutex.cpp
 
 source.o: source.cpp
 	$(CC) -c source.cpp $(FLAGS) -o source.o
