--- a/27/Makefile
+++ b/27/Makefile
@@ -1,5 +1,5 @@
 APP = bin
-OBJ = source.o ../libs/Terminal/terminal.o
+OBJ = source.o ../libs/Terminal/Terminal.o
 CXXFLAGS =  -lrt  -g
 CC = g++
 
@@ -10,7 +10,7 @@ source.o: source.cpp ../libs/ChunkBuffer/Buffer.h
 	$(CC) -c -o source.o source.cpp $(CXXFLAGS)
 
 ../libs/Terminal/terminal.o: ../libs/Terminal/terminal.h ../libs/Terminal/terminal.cpp
-	$(CC) -o ../libs/Terminal/terminal.o -c ../libs/Terminal/terminal.cpp $(CXXFLAGS)
+	$(CC) -o ../libs/Terminal/Terminal.o -c ../libs/Terminal/Terminal.cpp $(CXXFLAGS)
 
 clean:
 	rm -rf $(APP) $(OBJ) core
