--- a/28/Makefile
+++ b/28/Makefile
@@ -3,7 +3,7 @@ OBJ = source.o ../libs/Terminal/Terminal.o ../libs/Mutex/Mutex.o
 T_HEADER = ../libs/Terminal/Terminal.h
 B_HEADER = ../libs/ChunkBuffer/Buffer.h
 M_HEADER = ../libs/Mutex/Mutex.h
-CXXFLAGS = -lpthread
+CXXFLAGS = -lpthread -lresolv -lnsl -lsocket
 CC = g++
 
 $(APP): $(OBJ)
@@ -12,7 +12,7 @@ $(APP): $(OBJ)
 source.o: source.cpp $(B_HEADER)
 	$(CC) -c -o source.o source.cpp $(CXXFLAGS)
 
-../libs/Terminal/terminal.o: $(T_HEADER) ../libs/Terminal/terminal.cpp
+../libs/Terminal/Terminal.o: $(T_HEADER) ../libs/Terminal/Terminal.cpp
 	$(CC) -o ../libs/Terminal/Terminal.o -c ../libs/Terminal/Terminal.cpp $(CXXFLAGS)
 
 ../libs/Mutex/Mutex.o: $(M_HEADER) ../libs/Mutex/Mutex.cpp
